[package]
name = "kithara-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio pipeline: worker thread, effects chain, resampling."
keywords = ["audio", "dsp", "resampling", "playback", "player"]
categories = ["multimedia::audio"]

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
bon = { workspace = true }
delegate = { workspace = true }
kithara-abr = { workspace = true }
kithara-decode = { workspace = true }
kithara-events = { workspace = true }
kithara-stream = { workspace = true }
kithara-bufpool = { workspace = true }
kithara-beat = { workspace = true, optional = true }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }
biquad = { workspace = true }
rubato = { workspace = true }
realfft = { workspace = true }
thiserror = { workspace = true }
audioadapter-buffers = { workspace = true }
smallvec = { workspace = true }
ringbuf = { workspace = true }
tracing = { workspace = true }
kithara-platform = { workspace = true }
portable-atomic = { workspace = true }
fast-interleave = { workspace = true }
num-traits = { workspace = true }
hotpath = { workspace = true, optional = true }
unimock = { workspace = true }

[features]
default = ["symphonia"]
probe = []
mock = []
# Enable performance monitoring with hotpath-rs (timing only, minimal overhead)
perf = ["dep:hotpath", "hotpath/hotpath"]
# Enable memory profiling for examples (includes allocation tracking, adds overhead)
memprof = ["dep:hotpath", "hotpath/hotpath", "hotpath/hotpath-alloc"]
# Enable Apple AudioToolbox hardware decoder (macOS/iOS)
apple = ["kithara-decode/apple"]
# Enable Android MediaCodec hardware decoder (Android)
android = ["kithara-decode/android"]
# Enable the Symphonia software decoder path. Disable to build with
# only the hardware backend (apple or android) and no software fallback.
symphonia = ["kithara-decode/symphonia"]
# Enable libfdk-aac for HE-AAC v1/v2 decode. Symphonia's stock AAC
# decoder is LC-only; without this feature, HE-AAC v2 streams fail to
# play through the software fallback.
fdk-aac = ["kithara-decode/fdk-aac"]
# Native-only C++ time-stretch backends, opt-in. Each pulls a C++ toolchain
# (signalsmith: cc+libclang; bungee: cmake). Without one, default + wasm
# builds carry no stretch DSP: speed control stays, key-lock is compiled out.
stretch-signalsmith = ["dep:signalsmith-stretch"]
stretch-bungee = ["dep:bungee-rs"]
# NN beat/downbeat detector (kithara-beat, embedded small model). Native-only
# in practice: wasm builds simply do not enable it (rten on wasm unverified).
beat-nn = ["dep:kithara-beat"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha3", path = "../kithara-workspace-hack" }
signalsmith-stretch = { workspace = true, optional = true }
bungee-rs = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "AudioContext", "AudioWorkletNode", "AudioWorkletNodeOptions",
    "BaseAudioContext", "MessagePort"
] }

[dev-dependencies]
# `stretch-signalsmith` keeps the stretch-slot contract tests in the default
# `cargo test -p kithara-audio` run now that no pure-Rust backend exists.
kithara-audio = { path = ".", default-features = false, features = ["mock", "probe", "symphonia", "stretch-signalsmith"] }
assert_no_alloc = { workspace = true }
kithara-bufpool = { workspace = true }
portable-atomic = { workspace = true }
num-traits = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
kithara-decode = { workspace = true, features = ["mock", "probe", "symphonia"] }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe"] }
tempfile = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "stream"] }
tracing-subscriber = { workspace = true }
kithara-file = { workspace = true }
kithara-hls = { workspace = true }
kithara-assets = { workspace = true }
kithara-net = { workspace = true }
hotpath = { workspace = true }
