[package]
name = "kithara-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio pipeline: worker thread, effects chain, resampling."
keywords = ["audio", "dsp", "resampling", "playback", "player"]
categories = ["multimedia::audio"]

[features]
default = ["symphonia", "client-reqwest", "tls-rustls"]
probe = []
mock = []
# HTTP backend forwarding to every kithara-net-reaching dep.
client-reqwest = [
    "kithara-stream/client-reqwest",
    "kithara-events/client-reqwest",
    "kithara-abr/client-reqwest",
    "kithara-decode/client-reqwest",
]
client-wreq = [
    "kithara-stream/client-wreq",
    "kithara-events/client-wreq",
    "kithara-abr/client-wreq",
    "kithara-decode/client-wreq",
]
tls-rustls = [
    "kithara-stream/tls-rustls",
    "kithara-events/tls-rustls",
    "kithara-abr/tls-rustls",
    "kithara-decode/tls-rustls",
]
tls-native = [
    "kithara-stream/tls-native",
    "kithara-events/tls-native",
    "kithara-abr/tls-native",
    "kithara-decode/tls-native",
]
# Enable performance monitoring with hotpath-rs (timing only, minimal overhead)
perf = ["dep:hotpath", "hotpath/hotpath"]
# Enable memory profiling for examples (includes allocation tracking, adds overhead)
memprof = ["dep:hotpath", "hotpath/hotpath", "hotpath/hotpath-alloc"]
# Enable Apple AudioToolbox hardware decoder (macOS/iOS)
apple = ["kithara-decode/apple"]
# Enable Android MediaCodec hardware decoder (Android)
android = ["kithara-decode/android"]
# Enable the Symphonia software decoder path. Disable to build with
# only the hardware backend (apple or android) and no software fallback.
symphonia = ["kithara-decode/symphonia"]
# Enable libfdk-aac for HE-AAC v1/v2 decode. Symphonia's stock AAC
# decoder is LC-only; without this feature, HE-AAC v2 streams fail to
# play through the software fallback.
fdk-aac = ["kithara-decode/fdk-aac"]
# Native-only C++ time-stretch backends, opt-in. Each pulls a C++ toolchain
# (signalsmith: cc+libclang; bungee: cmake). Without one, default + wasm
# builds carry no stretch DSP: speed control stays, key-lock is compiled out.
stretch-signalsmith = ["dep:kithara-stretch", "kithara-stretch/stretch-signalsmith"]
stretch-bungee = ["dep:kithara-stretch", "kithara-stretch/stretch-bungee"]
# NN beat/downbeat detector (kithara-beat, embedded small model). Native-only
# in practice: wasm builds simply do not enable it (rten on wasm unverified).
beat-nn = ["dep:kithara-beat", "kithara-beat/embed-small-model"]

[dependencies]
kithara-abr = { workspace = true, default-features = false }
kithara-beat = { workspace = true, optional = true }
kithara-bufpool = { workspace = true }
kithara-decode = { workspace = true, default-features = false }
kithara-events = { workspace = true }
kithara-platform = { workspace = true }
kithara-stream = { workspace = true, default-features = false }
kithara-stretch = { workspace = true, default-features = false, optional = true }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }

arc-swap = { workspace = true }
audioadapter-buffers = { workspace = true }
biquad = { workspace = true }
bon = { workspace = true }
crossbeam-queue = { workspace = true }
delegate = { workspace = true }
fast-interleave = { workspace = true }
hotpath = { workspace = true, optional = true }
num-traits = { workspace = true }
portable-atomic = { workspace = true }
realfft = { workspace = true }
ringbuf = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unimock = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "AudioContext",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "MessagePort",
] }

[dev-dependencies]
# `stretch-signalsmith` keeps the stretch-slot contract tests in the default
# `cargo test -p kithara-audio` run now that no pure-Rust backend exists.
kithara-audio = { path = ".", default-features = false, features = ["mock", "probe", "symphonia", "stretch-signalsmith"] }
kithara-bufpool = { workspace = true }
kithara-decode = { workspace = true, features = ["mock", "probe", "symphonia"] }
kithara-storage = { workspace = true }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }

aes = { workspace = true }
assert_no_alloc = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true }
num-traits = { workspace = true }
portable-atomic = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
kithara-assets = { workspace = true }
kithara-file = { workspace = true }
kithara-hls = { workspace = true }
kithara-net = { workspace = true, default-features = false, features = [
    "client-reqwest",
    "tls-rustls",
] }

axum = { workspace = true }
hotpath = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
