[package]
name = "kithara-bufpool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic sharded buffer pool for zero-allocation hot paths"

[dependencies]
kithara-platform = { workspace = true }
hotpath = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha1", path = "../kithara-workspace-hack" }

[features]
perf = ["dep:hotpath", "hotpath/hotpath"]

[lints]
workspace = true

[dev-dependencies]
kithara-bufpool = { path = ".", default-features = false }
kithara-test-macros = { workspace = true }
wasm-bindgen-test = { workspace = true }
