[package]
name = "kithara-bufpool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sharded buffer pool for zero-allocation audio hot paths."
keywords = ["buffer", "pool", "audio", "performance", "sharded"]
categories = ["memory-management", "concurrency"]

[dependencies]
kithara-platform = { workspace = true }
hotpath = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha2", path = "../kithara-workspace-hack" }

[features]
perf = ["dep:hotpath", "hotpath/hotpath"]

[lints]
workspace = true

[dev-dependencies]
kithara-bufpool = { path = ".", default-features = false }
kithara-test-macros = { path = "../kithara-test-macros" }
wasm-bindgen-test = { workspace = true }
