[package]
name = "kithara-cache"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
kithara-core = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# Keep dev deps workspace-first; add here only after adding to root [workspace.dependencies].
