[package]
name = "kithara-coverage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage tracking and persistent coverage index for stream resources"

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
dashmap = { workspace = true }
kithara-storage = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }
tokio-util = { workspace = true, features = ["full"] }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
