[package]
name = "kithara-coverage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage tracking and persistent coverage index for stream resources"

[lints]
workspace = true

[features]
internal = []

[dependencies]
bincode = { workspace = true }
kithara-platform = { workspace = true }
kithara-storage = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }
tokio-util = { workspace = true, features = ["full"] }

[dev-dependencies]
kithara-coverage = { path = ".", default-features = false, features = ["internal"] }
kithara-test-utils = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = { workspace = true }
tokio-util = { workspace = true }
