[package]
name = "kithara-decode"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous audio decoding via Symphonia with PCM output"

[lints]
workspace = true

[dependencies]
kithara-stream = { workspace = true }
kithara-bufpool = { workspace = true }
derivative = { workspace = true }
re_mp4 = { workspace = true }
symphonia = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hotpath = { workspace = true, optional = true }
unimock = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.1", path = "../kithara-workspace-hack" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = { workspace = true, optional = true }
core-foundation-sys = { workspace = true, optional = true }
symphonia-core = { workspace = true, optional = true }
symphonia-format-isomp4 = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = { workspace = true }

[features]
# Default pulls in Symphonia so `cargo build` on any platform produces a
# usable decoder. Consumers wanting an apple/android hardware-only build
# set `default-features = false` and enable just the platform feature.
default = ["symphonia"]
perf = ["dep:hotpath", "hotpath/hotpath"]
apple = [
    "dep:core-foundation",
    "dep:core-foundation-sys",
    "dep:symphonia-core",
    "dep:symphonia-format-isomp4",
]
android = []
# Enables the software (Symphonia) decoder path. When disabled, the
# factory only uses the compiled hardware backend — no fallback.
symphonia = ["dep:symphonia"]
test-utils = ["unimock"]
internal = []

[dev-dependencies]
kithara-decode = { path = ".", default-features = false, features = ["internal", "symphonia"] }
kithara-test-utils = { workspace = true }
unimock = { workspace = true }
wasm-bindgen-test = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hotpath"]
