[package]
name = "kithara-decode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pluggable audio decode (Symphonia / Apple / Android) to PCM."
keywords = ["audio", "decoder", "codec", "pcm", "hls"]
categories = ["multimedia::audio"]

[lints]
workspace = true

[dependencies]
kithara-stream = { workspace = true, default-features = false }
kithara-bufpool = { workspace = true }
kithara-platform = { workspace = true }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
re_mp4 = { workspace = true }
smallvec = { workspace = true }
symphonia = { workspace = true, optional = true }
symphonia-core = { workspace = true, optional = true }
fdk-aac = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hotpath = { workspace = true, optional = true }
unimock = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha3", path = "../kithara-workspace-hack" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = { workspace = true, optional = true }
core-foundation-sys = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = { workspace = true }

[features]
# Default pulls in Symphonia + fdk-aac so `cargo build` on any platform
# produces a usable decoder with HE-AAC v1/v2 support. Consumers wanting
# an apple/android hardware-only build set `default-features = false`
# and enable just the platform feature; consumers explicitly avoiding
# libfdk-aac (LGPL + patent constraints) keep `["symphonia"]` only.
default = ["symphonia", "fdk-aac", "client-reqwest", "tls-rustls"]
perf = ["dep:hotpath", "hotpath/hotpath"]
apple = [
    "dep:core-foundation",
    "dep:core-foundation-sys",
    "dep:symphonia-core",
]
# In-tree fdk-aac adapter needs symphonia-core macros (`codec_profile!`,
# `support_audio_codec!`) which expand to `symphonia_core::*` paths.
android = []
# Enables the software (Symphonia) decoder path. When disabled, the
# factory only uses the compiled hardware backend — no fallback.
symphonia = ["dep:symphonia"]
# Override Symphonia's LC-only AAC decoder with libfdk-aac (HE-AAC
# v1/v2). Off by default — opt in per-target if needed.
fdk-aac = ["symphonia", "dep:symphonia-core", "dep:fdk-aac"]
probe = []
mock = []
# HTTP backend forwarding (kithara-net reached via kithara-stream).
client-reqwest = ["kithara-stream/client-reqwest"]
client-wreq = ["kithara-stream/client-wreq"]
tls-rustls = ["kithara-stream/tls-rustls"]
tls-native = ["kithara-stream/tls-native"]

[dev-dependencies]
kithara-decode = { path = ".", default-features = false, features = ["symphonia"] }
kithara-storage = { workspace = true }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }
wasm-bindgen-test = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hotpath"]
