[package]
name = "kithara-drm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AES-128 DRM decryption for streaming audio, extensible keys."
keywords = ["drm", "aes", "audio", "hls", "streaming"]
categories = ["multimedia::audio", "cryptography"]

[package.metadata.cargo-machete]
ignored = ["kithara-workspace-hack"]

[dependencies]
aes = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[dev-dependencies]
kithara-drm = { path = ".", default-features = false }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang", "no-block"] }
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
