[package]
name = "kithara-encode"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous audio encoding with packaged and byte outputs"
publish = false

[lints]
workspace = true

[dependencies]
kithara-stream = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.1", path = "../kithara-workspace-hack" }
ffmpeg-next = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }
