[package]
name = "kithara-encode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous audio encoding with packaged and byte outputs"
publish = false

[lints]
workspace = true

[dependencies]
bon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha1", path = "../kithara-workspace-hack" }
ffmpeg-next = { workspace = true }
fdk-aac = { workspace = true }
fdk-aac-sys = { workspace = true }
tempfile = { workspace = true }

