[package]
name = "kithara-encode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous audio encoding with packaged and byte outputs"
publish = false

[dependencies]
kithara-stream = { workspace = true }

bon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

fdk-aac = { workspace = true }
fdk-aac-sys = { workspace = true }
ffmpeg-next = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

