[package]
name = "kithara-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified event bus for kithara audio pipeline"

[lints]
workspace = true

[dependencies]
dashmap = { workspace = true }
delegate = { workspace = true }
kithara-net = { workspace = true, optional = true }
kithara-platform = { workspace = true }
num-traits = { workspace = true }
portable-atomic = { workspace = true }
smallvec = { workspace = true }
url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha1", path = "../kithara-workspace-hack" }

[features]
default = ["abr", "file", "hls", "audio", "player", "app", "queue", "downloader"]
abr = []
app = []
file = []
hls = ["abr"]
audio = []
player = []
queue = []
downloader = ["dep:kithara-net", "dep:url"]

[dev-dependencies]
kithara-events = { path = ".", default-features = false }
kithara-test-utils = { workspace = true, features = ["mock", "probe"] }
wasm-bindgen-test = { workspace = true }

