[package]
name = "kithara-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hierarchical event bus for the audio pipeline."
keywords = ["events", "audio", "observer", "pubsub", "player"]
categories = ["asynchronous"]

[features]
default = ["abr", "file", "hls", "audio", "decoder", "player", "app", "queue", "downloader", "drm", "asset"]
abr = []
app = []
asset = []
file = []
hls = ["abr"]
audio = []
decoder = []
drm = []
player = []
queue = []
downloader = ["dep:kithara-net", "dep:url"]
# HTTP backend forwarding. kithara-net is an optional dep here, so the refs are
# weak (`?`): enabling a backend never force-enables kithara-net.
client-reqwest = ["kithara-net?/client-reqwest"]
client-wreq = ["kithara-net?/client-wreq"]
tls-rustls = ["kithara-net?/tls-rustls"]
tls-native = ["kithara-net?/tls-native"]

[dependencies]
kithara-net = { workspace = true, optional = true, default-features = false }
kithara-platform = { workspace = true }

crossbeam-queue = { workspace = true }
dashmap = { workspace = true }
delegate = { workspace = true }
num-traits = { workspace = true }
portable-atomic = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[dev-dependencies]
kithara-events = { path = ".", default-features = false }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
